# ESP_Connect

./: .gitignore  CMakeLists.txt  README.md  SMART_HOME_IMPLEMENTATION.md  partitions.csv  sdkconfig.defaults
Frontend/: README.md  package-lock.json  package.json
Frontend/src/: App.tsx  index.css
main/: CMakeLists.txt  device_state_manager.c  device_state_manager.h  homekit_bridge.c  homekit_bridge.h  main.c  mqtt_bridge.c  mqtt_bridge.h
